--- a/src/component/Holdercard/Holdercard.css
+++ b/src/component/Holdercard/Holdercard.css
@@ -1,3 +1,14 @@
-.heading{
-   text-align: center;
+.heading {
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;
+}
+.card-section {
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-top: 100px;
+}
+
+.cardblock {
+  display: flex;
+  justify-content: space-around;
 }
