--- a/src/component/Holdercard/Card.css
+++ b/src/component/Holdercard/Card.css
@@ -1,25 +1,24 @@
-.card {
+.rrcard {
   width: 300px;
   height: 300px;
   opacity: 0.95;
-  border-radius: 1em;
+  border-radius: 2rem;
   margin: 20px;
   border: 2px black solid;
 }
 
-.title {
+.rrtitle {
   padding: 20px;
   padding-top: 50px;
   font-family: Ubantu;
-  color: red;
 }
 
-.cardbutton {
+.rrcardbutton {
   margin-top: 20px;
   text-align: center;
   height: 50px;
   width: 150px;
-  background-color: blue;
+ 
   opacity: 0.8;
   font-size: large;
   border-radius: 0.5em;
