--- a/src/component/Oldheader/navbar.css
+++ b/src/component/Oldheader/navbar.css
@@ -17,10 +17,10 @@
 	align-items: center;
 	min-height: 6vh;
 	font-family: 'Nunito', sans-serif;
-	background-color: lightpink;
+	background-color: #1f2833;
 	width: 100%;
 	height: 60px;
-	border-bottom: 3px solid red;
+	border-bottom: 3px solid #66fcf1;
 
 }
 
@@ -41,12 +41,12 @@
 }
 
 .rajlogo-name{
-	color: darkred;
+	color: #c5c6c7;
 	text-transform: uppercase;
 	}
 
 .rajnav-link{
-	color: blueviolet;
+	color: #66fcf1;
 	display: flex;
 	justify-content: space-around;
 	margin-right: 100px;
@@ -99,7 +99,7 @@
 
 .rajnav-link li a:hover{
 	
-	color: red;
+	color: #45a29e;
 }
 
 @media screen and (max-width: 1035px)
@@ -113,8 +113,8 @@
 		right: 0px;
 		height: 50vh;
 		width: 50%;
-		top: 8vh;
-		background-color: lightpink;
+		top: 10vh;
+		background-color: #1f2833;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -122,7 +122,7 @@
 		transform: translateX(100%);
 		transition: transform 0.4s ease-in;
 		opacity: 0.85;
-		border: 3px solid deeppink;
+		border: 3px solid #66fcf1;
 		
 		
 	}
