--- a/src/component/Holdercard/Card.css
+++ b/src/component/Holdercard/Card.css
@@ -18,10 +18,16 @@
   text-align: center;
   height: 50px;
   width: 150px;
- 
-  opacity: 0.8;
+
+  opacity: 1;
   font-size: large;
-  border-radius: 0.5em;
-  background-origin: auto;
-  border: 2px black solid;
+  border-radius: 0.3em;
+  border: 1px solid #1f2833;
+}
+
+.rrcardbutton a {
+  text-decoration: none;
+  color: black;
+  font-size: larger;
+  font-weight: 500;
 }
