--- a/src/component/jumboImage/jumboImage.css
+++ b/src/component/jumboImage/jumboImage.css
@@ -1,18 +1,42 @@
-.jumboimage{
-   display: block;
-   height: 450px;
-   overflow-y: hidden;
+.rrjumbo {
+  width: 100%;
+  height: 600px;
 }
 
-.jimage{
-   width: 100%;
-   
+.rrjumbotitle {
+  font-size: 130px;
+  color: #66fcf1;
+  text-align: center;
+  font-family: "Festive", cursive;
 }
 
-.jimage img{
-   width: 100% ;
-   height: 450px;
+.rrjumbocontent {
+  font-size: 25px;
+  color: #72889e;
+  text-align: center;
+  font-family: "Noto Sans Mono", monospace;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
+.rrjumbobutton {
+  text-align: center;
+  margin-top: 20px;
+}
 
+.rrjumbobutton button {
+  font-size: 30px;
+  color: #66fcf1;
+  width: 300px;
+  height: 50px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: 2px solid #66fcf1;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+}
 
+.rrjumbobutton button:hover {
+  transform: scale(1.1);
+}
